--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 
+#Spring DATA
+spring.datasource.url=jdbc:mysql://localhost:3306/tw_gerenciador_tarefas
+spring.datasource.username=root
+spring.datasource.data-password=mysql
+spring.jpa.hibernate.ddl-auto=update
